--- a/Code/back-end/src/main/resources/application.properties
+++ b/Code/back-end/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=back-end
+spring.datasource.username=root
+spring.datasource.password=Mot2Ba4Nam6Bay8Chin
+#=======
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+# -----------------------
+# Naming entity mapping table in SQL
+# -----------------------
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# -----------------------
+# Show sql
+# -----------------------
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# -----------------------
+# Pagable
+# -----------------------
+# Default page size
+spring.data.web.pageable.default-page-size=10
+# start page from 1 (instead of 0)
+spring.data.web.pageable.one-indexed-parameters=true
+# parameter name
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.size-parameter=size
+spring.data.web.sort.sort-parameter=sort
+
