--- a/Code/back-end/src/main/resources/application.properties
+++ b/Code/back-end/src/main/resources/application.properties
@@ -1,31 +1,29 @@
-spring.application.name=back-end
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Mot2Ba4Nam6Bay8Chin
-#=======
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.jpa.hibernate.ddl-auto=update
-# -----------------------
-# Naming entity mapping table in SQL
-# -----------------------
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.datasource.password=root
 
-# -----------------------
-# Show sql
-# -----------------------
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.auto_quote_keyword=true tu dong them dau `
+spring.jpa.defer-datasource-initialization=true
+#ung dung khoi dong xong moi tao du lieu,(chay xong inteliji moi khoi tao du lieu)
+spring.sql.init.mode=always
+# luon chay cac tep scrip SQL khi ung dung chay
+spring.jpa.properties.auto_quote_keyword=true
+#tu dong boc các  key ửod để ko trùng vs cac tu khóa trong SQl
 
-# -----------------------
-# Pagable
-# -----------------------
-# Default page size
+
 spring.data.web.pageable.default-page-size=10
-# start page from 1 (instead of 0)
-spring.data.web.pageable.one-indexed-parameters=true
-# parameter name
-spring.data.web.pageable.page-parameter=page
-spring.data.web.pageable.size-parameter=size
-spring.data.web.sort.sort-parameter=sort
 
+spring.data.web.pageable.one-indexed-parameters=true
+
+
+
+jwt.key.public=classpath:app.pub
+jwt.key.private=classpath:app.key
+
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.orm.jdbc.extract=trace
