--- a/Code/back-end/src/main/resources/application.properties
+++ b/Code/back-end/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=back-end
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.datasource.username=root
 spring.datasource.password=Mot2Ba4Nam6Bay8Chin
 #=======
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=Az123131@#
+jwt.expirationMs=3600000
+server.servlet.header.referrer-policy=strict-origin-when-cross-origin
+server.port=8080
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 # -----------------------
 # Naming entity mapping table in SQL
 # -----------------------
